# ArbCore

./: .gitignore  Cargo.toml  README.md
crates/marketdata/: Cargo.toml
crates/marketdata/src/: errors.rs  lib.rs  manager.rs  types.rs  ws_client.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: errors.rs  lib.rs  orderbook.rs  types.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: config.rs  engine.rs  errors.rs  lib.rs  planner.rs  tri_arbitrage.rs
crates/stroage/: Cargo.toml
