[workspace.package]
version = "0.1.0"
edition = "2024"
description = "ARB"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Shradhesh71/arb"

[workspace]
members = [ "crates/marketdata",
    "crates/orderbook", "crates/strategy", "crates/stroage",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.11.0"
# tokio = "1.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
# reqwest = { version = "0.12.24", features = ["json"] }
# chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.39.0"
parking_lot = "0.12.5"
thiserror = "2.0.17"
toml = "0.9.8"