[package]
name = "orderbook"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rust_decimal.workspace = true
serde = {workspace = true, features = ["derive"]}
parking_lot.workspace = true
thiserror.workspace = true