[package]
name = "strategy"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rust_decimal = {workspace = true, features = ["serde"]}
serde = {workspace = true, features = ["derive"]}
parking_lot.workspace = true
thiserror.workspace = true
rust_decimal_macros.workspace = true
toml.workspace = true
tokio ={workspace = true, features = ["rt", "time"]}
uuid = {workspace = true, features = ["v4"]}